[gd_scene load_steps=3 format=3 uid="uid://xqfa36m0lheo"]

[ext_resource type="Theme" uid="uid://fs8ra7ncelrb" path="res://resources/themes/ui_theme.tres" id="1_qale4"]
[ext_resource type="Script" uid="uid://cm4wa0eqwexhk" path="res://scenes/main menu/main_menu.gd" id="2_c8ghj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qale4")
script = ExtResource("2_c8ghj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Random test scenes"
horizontal_alignment = 1

[node name="Cards" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cards"

[node name="Monsters" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Monsters"

[node name="Attacks" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attacks"

[node name="Grid" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Grid"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Monsters" to="." method="_on_monster_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Attacks" to="." method="_on_attacks_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Grid" to="." method="_on_grid_pressed"]
